v3.0.6 - in progress
	* Added C++ class
	* Fixed Series 2 addressing issue
	* Enhanced address checking abilities of xbee_conNew()

v3.0.5 - 09 Mar 2012
	* Added FreeBSD support
	* Renamed xbee_logGet*() -> xbee_log*Get(), and xbee_logSet*() -> xbee_log*Set()
	* Provided C++ support
	* Added xbee_vsetup()
	* Added address validation
	* Added man page documentation
	* Added xbee_conPurge()
	* Added pseudo terminal application
	* Changed to API mode 1 by default (compile time option)
	* Added 'catch-all' connections
	* Changed 'Remote AT' timeouts to 750ms
	* Relicensed to LGPLv3

v3.0.4 - 29 Feb 2012
	* Implemented rx/tx counters
	* Fixed XBee Series 2 data broadcast
	* Fixed internal bugs
	* Added sample code for retrieving library info (commit, build time, etc...)
	* Added 'net' mode, and xbee_netStart()
	* Added xbee_attachEOFCallback() to get alerts when a device error occurs (e.g: FDTI / Network disconnect)
	* Fixed mutex/thread issue
	* Added length checking on transmit functions

v3.0.3 - 21 Feb 2012
	* Fixed xbee_rxHandler() - now obeys allowFrameId flag
	* Exported xbee_pktDataGet()
	* Protected xbee_s1_io_parseInputs() against buffer overrun
	* XBee Series 1 now supports modem status connection types
	* XBee Series 2 support is completed (excluding sensor connection types)
	* Added generic sample code
	* Added more sample code for use with XBee Series 1 modules
	* Added sample code for use with XBee Series 2 modules

v3.0.2 - 20 Feb 2012
	* Added explicit logging of Tx & Rx data
	* Fixed internal bugs
	* Re-implemented ll_[get|ext]_index() functions
	* Refreshed error codes
	* XBee Series 1 support is complete
	* Added sample code for use with XBee Series 1

v3.0.1 - 19 Feb 2012
	* First functional release
	* Re-structured and flexible build system
	* Generic 'mode' framework
	* XBee Series 1 support with Data connection (16/64-bit addressing)
	* Tx Status handling enabled by default (brings Tx error back from module through libxbee)
